# dgl_ros

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  coverage.xml  loco.urdf  package.xml
.github/workflows/: cmake-multi-platform.yml  code_cov.yml  docs.yml  main.yml  static.yml
dgl_ros/: .coverage  CMakeLists.txt  coverage.xml  package.xml  test_coverage.py
dgl_ros/include/dgl_ros/: actor.hpp  agent.hpp  observer.hpp
dgl_ros/include/dgl_ros/util/: cloud.hpp  generic_subscription.hpp  geometry.hpp
dgl_ros/src/: actor.cpp  agent.cpp  observer.cpp
dgl_ros/src/util/: cloud.cpp  geometry.cpp
dgl_ros_interfaces/: CMakeLists.txt  package.xml
dgl_ros_models/: .coverage  CMakeLists.txt  package.xml  requirements.txt
dgl_ros_models/config/: cgn_config.yaml
dgl_ros_models/dgl_ros_models/: .coverage  cgn_test.py  contact_graspnet.py  coverage.xml
dgl_ros_models/dgl_ros_models/cgn/: cgn_sanity_check.py
dgl_ros_models/dgl_ros_models/cgn/checkpoints/: config.yaml
dgl_ros_models/dgl_ros_models/tests/: test_cgn.py
dgl_ros_models/include/dgl_ros/util/: tf.hpp
dgl_ros_models/include/dgl_ros_models/: contact_graspnet.hpp  gpd.hpp  instantiations.hpp
dgl_ros_models/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
dgl_ros_models/launch/: detect_grasps.py
dgl_ros_models/log/: latest_build
dgl_ros_models/src/: contact_graspnet.cpp  gpd.cpp  instantiations.cpp
dgl_ros_models/src/dgl_ros_models/: contact_graspnet.py
dgl_ros_models/src/util/: cloud.cpp  tf.cpp
dgl_ros_moveit/: CMakeLists.txt  package.xml
dgl_ros_moveit/include/dgl_ros_moveit/stages/: action_base.hpp  deep_grasp_pose.hpp
dgl_ros_moveit/src/stages/: deep_grasp_pose.cpp
docs/: Doxyfile
docs/docs/html/: index.html  navtreedata.js
docs/html/: graph_legend.html  index.html  navtreedata.js  navtreeindex0.js
docs/html/search/: all_0.js  pages_0.js  searchdata.js
docs/sphinx/source/: api.rst  conf.py  index.rst
include/dgl_ros/: grasp_detection_server.hpp  observer.hpp
include/dgl_ros/components/: grasp_generator.hpp
include/dgl_ros/moveit/stages/: action_base.h  deep_grasp_pose.hpp
include/dgl_ros/util/: pose.hpp
include/dgl_ros/util/sensors/: cloud.hpp
launch/: detect_grasps.py
ros_dgl/: CMakeLists.txt  package.xml
ros_dgl/include/ros_dgl/: actor.hpp  agent.hpp  gpd_grasp_detection_server.hpp  grasp_detection_server.hpp  grasp_generator.hpp  observer.hpp
ros_dgl/include/ros_dgl/components/: sensor_listener.hpp
ros_dgl/include/ros_dgl/util/: cloud.hpp  pose.hpp
ros_dgl/include/ros_dgl/util/sensors/: cloud.hpp
ros_dgl/launch/: detect_grasps.py
ros_dgl/src/: actor.cpp  agent.cpp  gpd_grasp_detection_server.cpp  grasp_detection_server.cpp  grasp_generator.cpp  observer.cpp
ros_dgl/src/components/: grasp_generator.cpp  sensor_listener.cpp
ros_dgl/src/moveit/stages/: deep_grasp_pose.cpp
ros_dgl/src/util/: cloud.cpp  geometry.cpp  pose.cpp
ros_dgl/src/util/sensors/: cloud.cpp
ros_dgl_examples/: CMakeLists.txt  package.xml
ros_dgl_examples/config/: gpd_config.yaml
ros_dgl_examples/include/ros_dgl_/: gpd_grasp_detection_server.hpp
ros_dgl_examples/include/ros_dgl_examples/: gpd_grasp_detection_server.hpp  instantiations.hpp
ros_dgl_examples/launch/: detect_grasps.py
ros_dgl_examples/src/: gpd_grasp_detection_server.cpp  instantiations.cpp
ros_dgl_interfaces/: CMakeLists.txt  package.xml
ros_dgl_interfaces/action/: SampleGraspPoses.action
ros_dgl_interfaces/srv/: ObserveCloud.srv
ros_dgl_moveit/: CMakeLists.txt  package.xml
ros_dgl_moveit/include/ros_dgl_moveit/stages/: deep_grasp_pose.h
ros_dgl_moveit/src/stages/: deep_grasp_pose.cpp
src/: grasp_detection_server.cpp  observer.cpp
src/components/: grasp_generator.cpp  sensor_listener.cpp
src/util/: pose.cpp
src/util/sensors/: cloud.cpp
