<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dgl_ros_moveit</name>
  <version>0.0.0</version>
  <description>Moveit task constructor stages for obtaining deep grasps.</description>
  <maintainer email="peraltas@seas.upenn.edu">root</maintainer>
  <license>MIT</license>

  <depend>moveit_task_constructor_core</depend>
  <depend>moveit_visual_tools</depend>
  <depend>dgl_ros_interfaces</depend>
  <depend>rclcpp</depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>