<?xml version="1.0"?>
<package format="3">
    <name>ros_dgl_interfaces</name>
    <version>0.0.1</version>
    <description>Nodes to integrate a deep learning model in ros2</description>
    <maintainer email="peraltasjp@gmail.com">Sebastian Peralta </maintainer>
    <license>BSD</license>
    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>sensor_msgs</depend>
    <depend>deep_grasp_msgs</depend>
    <depend>std_msgs</depend>
    <depend>rclcpp</depend>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>rosidl_default_runtime</exec_depend>

    <build_depend>rosidl_default_generators</build_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>